--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 <div id="root"></div>
 </body>
 
+<script src="https://cdn.ravenjs.com/3.22.3/raven.min.js" crossorigin="anonymous"></script> {#sentry.io#}
 <script src="index.js"></script>
 
 </html>
